--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <!-- PHOTOS DANS LA GALERIE -->
               <ul data-slides>
                 <li class="slide" data-active>
-                  <img src="/images/models/equipes.jpg" alt="Image #1" />
+                  <img src="./images/models/equipes.jpg" alt="Image #1" />
                 </li>
                 <li class="slide">
                   <img src="/images/models/action2.jpg" alt="Image #2" />
