COMPT A REBOUR ACCUEIL

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             <h1>Fighting Academy</h1>
               <p>
               <strong class="clr">Club Multi_Boxe <br /></strong>
-             <a href="https://maps.app.goo.gl/ppJfSojicTKNDKrf6" target="_blank">1 PL Alfred Sauvy, 31270 Cugnaux</a></p>            
+             <a href="https://maps.app.goo.gl/ppJfSojicTKNDKrf6" target="_blank">1 PL Alfred Sauvy, 31270 Cugnaux</a></p>      
+             <div id="countdown-table">
+              <div id="countdown-label">Prochaine séance <span class="clr">K1</span>  est dans :</div><br>
+              <div id="countdown-timer"></div>
+            </div>      
           </div>
         </div>
         <nav>
@@ -136,7 +140,7 @@
                   <img src="/images/models/equipes.jpg" alt="Image #1" />
                 </li>
                 <li class="slide">
-                  <img src="/images/models/action2.jpg" alt="Image #2" />
+                  <img src="./images/models/action2.jpg" alt="Image #2" />
                 </li>
 
                 <li class="slide">
@@ -331,10 +335,6 @@
           </div>
 
           <section id="K1"class="activity-section">
-            <div id="countdown-table">
-              <div id="countdown-label">Prochaine séance est dans :</div><br>
-              <div id="countdown-timer"></div>
-            </div>
             <span class="mainD">
               <img src="./images/models/jaber.jpg" alt="" />
               <h1 class="image-title">K1</h1>
@@ -494,11 +494,11 @@
         <div class="piedDePage">
           <ul class="infoFooter" id="infoFooter">
             <h3>Information</h3>
-            <a href=""><li>Mentions légales</li></a>
-            <a href=""><li>Politique d'expédition</li></a>
-            <a href=""><li>Conditions d'utilisation</li></a>
-            <a href=""><li>Politique de confidentialité</li></a>
-            <a href=""><li>Politique de remboursement</li></a>
+            <a href="https://fightingacademy.fr/policies/legal-notice"><li>Mentions légales</li></a>
+            <a href="https://fightingacademy.fr/policies/shipping-policy"><li>Politique d'expédition</li></a>
+            <a href="https://fightingacademy.fr/policies/terms-of-service"><li>Conditions d'utilisation</li></a>
+            <a href="https://fightingacademy.fr/policies/privacy-policy"><li>Politique de confidentialité</li></a>
+            <a href="https://fightingacademy.fr/policies/refund-policy"><li>Politique de remboursement</li></a>
           </ul>
         </div>
       </footer>
