--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <strong class="clr">Club Multi_Boxe <br /></strong>
              <a href="https://maps.app.goo.gl/ppJfSojicTKNDKrf6" target="_blank">1 PL Alfred Sauvy, 31270 Cugnaux</a></p>      
              <div id="countdown-table">
-              <div id="countdown-label">Prochaine séance <span class="clr">K1</span>  est dans :</div><br>
+              <div id="countdown-label">Prochaine séance <span class="clr">K1</span>  dans :</div><br>
               <div id="countdown-timer"></div>
             </div>      
           </div>
