--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
     <span class="image main"><img src="./images/models/planningimg.png" alt="planning" /></span>
     <object data="votre_fichier.pdf" type="application/pdf" width="100%" height="600px">
       <button><a href="./images/models/planning2023-2024_84a1e5b6-cb92-44dd-a0c8-7c9ef4117c40.pdf">Télécharger</a></button> 
+      <button><a class="btn btn-primary" href="./calendrier.html" role="button">calendrier</a></button>
     </object>
   </section>
 
@@ -484,6 +485,16 @@
         <!-- Adhésion -->
         <article id="adhesion">
             <h2 class="major">Adhésion</h2>
+            <p>ADHESION 2023 / 2024
+DE SEPTEMBRE À JUIN
+COURS ADULTES A PARTIR DE 13 ANS : 
+8 cours / semaine en illimité = 321 € licence comprise (règlement par chèque possible en 3 x 107 € à l’ordre du Club )
+
+COURS ADOS 10 – 12 ANS :
+2 cours / semaine en illimité = 309 € licence comprise (règlement par chèque possible en 3 x 103 € à l’ordre du Club )
+
+COURS ENFANTS 7 – 9 ANS :
+1 cours / semaine = 190 € licence comprise (règlement par chèque possible en 2 x 95 € à l’ordre du Club )</p>
         </article>
 
         <!-- FIN Planning -->
