--- a/calendrier.html
+++ b/calendrier.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -58,9 +58,7 @@
   </head>
   <body>
     <div>
-      <a href="/index.html#about" id="backButton" class="btn btn-primary"
-        >Retour</a
-      >
+      <a href="./index.html" id="backButton" class="btn btn-primary">Retour</a>
       <div id="calendar"></div>
     </div>
 
