--- a/impression.html
+++ b/impression.html
@@ -26,7 +26,7 @@
       <h4>Renseignements :</h4>
       <div>
         <label for="typeInscription"
-          >Type d'inscription : <span class="info" id="typeInscription"></span
+          >Inscription pour : <span class="info" id="typeInscription"></span
         ></label>
       </div>
 
