--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Club de Boxe Cugnaux Fighting Academy</title>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="Club boxe Cugnaux : cours boxe anglaise, K1, MMA. Entraînements dynamiques, ambiance conviviale. Rejoignez passion sports combat, progression rapide!">
     <meta name="keywords" content="Boxe, boxe anglaise, muay thai, boxe thai , club de boxe toulouse, sport de combat, magasin de sport toulouse">
     <!-- Balises Open Graph -->
