--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div></a>
         <div class="content">
           <div class="inner">
-            <h1>Fighting Academy <span class="clr">Cugnaux </span> <br> <span style="font-size: small; color:rgb(220, 1, 1); background:rgb(37, 37, 37);">Excellence en Boxe, K1, MMA et Plus encore!</span> </h1>
+            <h1><b style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;">Fighting Academy </b><span class="clr" style="font-size:medium;">Cugnaux </span> <br> <span style="font-size: small; color:rgb(248, 255, 189); background:rgb(37, 37, 37);">Excellence en Boxe, K1, MMA et Plus encore!</span> </h1>
             <!-- <a class="button" id="ensavoirplus">en savoir plus</a>
             <article>
               <p style="background-color: rgb(255, 255, 255); color:black; display:none;">Bienvenue à la  Fighting Academy Cugnaux- votre destination ultime pour la passion des sports de combat et la progression rapide!
@@ -64,7 +64,7 @@
           </ul>
         </nav>
         
-        <a href="https://fightingacademy.fr/collections/"><i class="fa fa-shopping-bag fa-2x" aria-hidden="true"> <br><span class="clr" style="font-size:small">Fighting Store</span> </i></a></b>
+        <a href="https://fightingacademy.fr/collections/all"><i style="color: rgb(207, 195, 176);" class="fa fa-shopping-bag fa-2x" aria-hidden="true"> <br><span class="clr" style="font-size:small">Fighting Store</span> <h6>Magasin d'articles de sports</h6></i></a></b>
       </header>
 
       <!-- Main -->
