--- a/impression.html
+++ b/impression.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="{{ settings.color_button }}" />
     <link rel="stylesheet" href="./impression.css" media="print" />
     <link rel="stylesheet" href="./impression.css" />
     <title>Formulaire d'Inscription</title>
