Résolution des conflits après pull

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </ul>
         </nav>
         
-        <a href="https://fightingacademy.fr/collections/all"><i style="color: rgb(207, 195, 176);" class="fa fa-shopping-bag fa-2x" aria-hidden="true"> <br><span class="clr" style="font-size:small">Fighting Store</span> <h6>Magasin d'articles de sports</h6></i></a></b>
+        <a href="https://fightingacademy.fr/pages/fighting-store"><i style="color: rgb(207, 195, 176);" class="fa fa-shopping-bag fa-2x" aria-hidden="true"> <br><span class="clr" style="font-size:small">Fighting Store</span> <h6>Magasin d'articles de sports</h6></i></a></b>
       </header>
 
       <!-- Main -->
