--- a/impression.html
+++ b/impression.html
@@ -92,7 +92,7 @@
         <li>Gants de boxe</li>
         <li>Protège-tibias</li>
         <li>Protège-dent</li>
-        <li>Kokki</li>
+        <li>Coquille</li>
       </ul>
       <p>
         Lors de votre inscription, nous pouvons vous prêter le matériel
