mise a jour contact

--- a/index.html
+++ b/index.html
@@ -515,14 +515,14 @@
     <h1 itemprop="name">FIGHTING ACADEMY CUGNAUX</h1>
     <p itemprop="description">À PROXIMITÉ DE TOULOUSE : COURS DE BOXE ANGLAISE, K1, MMA. ENTRAÎNEMENTS DYNAMIQUES DANS UNE AMBIANCE CONVIVIALE. REJOIGNEZ-NOUS.</p>
     <span itemprop="address"><br>1 place Alfred Sauvy, <br>Cugnaux, 31270, France</span>
-    <span itemprop="telephone" onclick="window.location.href='tel:0782695986';">07 82 69 59 86</span> <br>
-    <span itemprop="email" onclick="window.location.href='mailto:fightingacademy31@email.com';">fightingacademy31@email.com</span>
+    <span itemprop="telephone" onclick="window.location.href='tel:+33782695986';">07 82 69 59 86</span> <br>
+    <span itemprop="email" onclick="window.location.href='mailto:fightingacademy@gmail.com';">fightingacademy@gmail.com</span>
     <span itemprop="openingHours"><br>Horaires d'ouverture : <br> lundi au Vendredi 10h00 - 19h00</span>
   </div>
  
  <br><br>
 
-  <form method="post" action="#">
+  <!-- <form method="post" action="#">
     <div class="fields">
       <div class="field half">
         <label for="name">Nom</label>
@@ -543,9 +543,9 @@
       </li>
       <li><input type="reset" value="Réinitialiser" /></li>
     </ul>
-  </form>
+  </form> -->
   <p>
-    Vous pouvez également nous retrouver sur les réseaux sociaux pour les dernières mises à jour et actualités :
+    Vous pouvez également nous contacter sur les réseaux sociaux :
   </p>
  
       <a href="https://www.snapchat.com/add/fight.academy"><i class="fa fa-snapchat fa-2x" aria-hidden="true"></i></a>
