--- a/index.html
+++ b/index.html
@@ -695,7 +695,8 @@
           </ul>
         </div>
       </footer>
-      <p class="copyright" style="z-index: 99;">&copy; fightingAcademy.</p>
+
+      <p class="copyright">&copy; nj.fightingAcademy Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
       <div id="toggleFooter" style="z-index: 99;">&#9776;</div>
     </div>
 
